# briefcase-plugin-test

./: README.md  pyproject.toml
src/briefcase_plugin_test/: pursuedpybear.py  pygame.py  pyside6.py  toga.py
